<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/family_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/choose_family"
                android:entries="@array/values_family"/>
            <Button
                android:id="@+id/add_family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"/>
            <Button
                android:id="@+id/delete_family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/measureRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8sp"
            tools:listitem="@layout/measure_row"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>