<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/family_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:alignContent="stretch"
        app:alignItems="stretch"
        app:flexWrap="wrap">

        <Spinner
            android:id="@+id/family_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/add_family"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintStart_toEndOf="@+id/family_spinner"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/delete_family"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintStart_toEndOf="@+id/add_family"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_save_black_24dp"
            android:drawableStart="@drawable/ic_save_black_24dp"
            android:text="@string/save"/>

    </com.google.android.flexbox.FlexboxLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/family_name_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="@dimen/default_padding"
        app:alignContent="stretch"
        app:alignItems="stretch"
        app:flexWrap="wrap">

        <TextView
            android:id="@+id/family_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorFontDark"
            android:textSize="@dimen/title_size" />

        <Button
            android:id="@+id/rename_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rename" />

        <Button
            android:id="@+id/add_measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_measure" />
    </com.google.android.flexbox.FlexboxLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/measure_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding"
        tools:listitem="@layout/measure_row">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>